--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
-    "angular-smart-table": "^2.1.7"
+    "angular-smart-table": "^2.1.7",
+    "jquery-validation": "^1.15.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
